few changes on backend controllers + scss changes

--- a/client/src/components/registerPage/RegisterPage.scss
+++ b/client/src/components/registerPage/RegisterPage.scss
@@ -1,7 +1,6 @@
-body {
+.register-page-container {
     background-image: url("../../../assets/images/background.png");
     background-size: cover;
-    background-position: center;
     height: 100vh;
     display: flex;
     justify-content: center;
