--- a/client/src/components/loginPage/LoginPage.scss
+++ b/client/src/components/loginPage/LoginPage.scss
@@ -1,113 +1,111 @@
-body {
+.login-page-container {
     background-image: url("../../../assets/images/background.png");
     background-size: cover;
-    background-position: center;
     height: 100vh;
     display: flex;
     justify-content: center;
     align-items: center;
     margin: 0;
     font-family: 'Arial', sans-serif;
-}
 
-
-.login-page {
-    background: rgba(255, 255, 255, 0.2);
-    border-radius: 16px;
-    backdrop-filter: blur(10px);
-    box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1);
-    padding: 40px;
-    max-width: 400px;
-    width: 100%;
-    color: #fff;
-    text-align: center;
-    animation: fadeIn 1s ease-in-out;
-
-    h1 {
-        margin-bottom: 20px;
-        font-size: 2rem;
+    .login-page {
+        background: rgba(255, 255, 255, 0.2);
+        border-radius: 16px;
+        backdrop-filter: blur(10px);
+        box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1);
+        padding: 40px;
+        max-width: 400px;
+        width: 100%;
         color: #fff;
-    }
+        text-align: center;
+        animation: fadeIn 1s ease-in-out;
 
-    p {
-        margin-bottom: 30px;
-        font-size: 1rem;
-        color: #ddd;
-    }
-
-    .input-container {
-        position: relative;
-        margin-bottom: 20px;
-
-        .icon {
-            position: absolute;
-            left: 15px;
-            top: 50%;
-            transform: translateY(-50%);
+        h1 {
+            margin-bottom: 20px;
+            font-size: 2rem;
             color: #fff;
-            font-size: 1.2rem;
         }
 
-        .input {
-            width: 82%;
-            padding: 12px 15px 12px 45px;
+        p {
+            margin-bottom: 30px;
             font-size: 1rem;
-            border: 1px solid rgba(255, 255, 255, 0.3);
-            border-radius: 8px;
-            background: rgba(255, 255, 255, 0.1);
-            color: #fff;
-            outline: none;
-            transition: border-color 0.3s ease;
+            color: #ddd;
+        }
 
-            &:focus {
-                border-color: #fff;
+        .input-container {
+            position: relative;
+            margin-bottom: 20px;
+
+            .icon {
+                position: absolute;
+                left: 15px;
+                top: 50%;
+                transform: translateY(-50%);
+                color: #fff;
+                font-size: 1.2rem;
+            }
+
+            .input {
+                width: 82%;
+                padding: 12px 15px 12px 45px;
+                font-size: 1rem;
+                border: 1px solid rgba(255, 255, 255, 0.3);
+                border-radius: 8px;
+                background: rgba(255, 255, 255, 0.1);
+                color: #fff;
+                outline: none;
+                transition: border-color 0.3s ease;
+
+                &:focus {
+                    border-color: #fff;
+                }
             }
         }
-    }
 
-    button {
-        width: 100%;
-        padding: 12px;
-        background: linear-gradient(135deg, #6e7df7, #8e97f9);
-        color: #fff;
-        border: none;
-        border-radius: 8px;
-        font-size: 1rem;
-        cursor: pointer;
-        transition: background 0.3s ease;
-
-        &:hover {
-            background: linear-gradient(135deg, #8e97f9, #6e7df7);
-        }
-    }
-
-    p:last-child {
-        margin-top: 20px;
-        font-size: 0.9rem;
-        color: #bbb;
-        cursor: pointer;
-        transition: color 0.3s ease;
-
-        &:hover {
+        button {
+            width: 100%;
+            padding: 12px;
+            background: linear-gradient(135deg, #6e7df7, #8e97f9);
             color: #fff;
+            border: none;
+            border-radius: 8px;
+            font-size: 1rem;
+            cursor: pointer;
+            transition: background 0.3s ease;
+
+            &:hover {
+                background: linear-gradient(135deg, #8e97f9, #6e7df7);
+            }
         }
-    }
-    .register-link {
-        margin-top: 20px;
-        font-size: 1rem;
-        color: #ddd;
-    
-        a {
-            color: #ddd;
-            text-decoration: none;
+
+        p:last-child {
+            margin-top: 20px;
+            font-size: 0.9rem;
+            color: #bbb;
+            cursor: pointer;
             transition: color 0.3s ease;
-    
+
             &:hover {
                 color: #fff;
             }
         }
+
+        .register-link {
+            margin-top: 20px;
+            font-size: 1rem;
+            color: #ddd;
+
+            a {
+                color: #ddd;
+                text-decoration: none;
+                transition: color 0.3s ease;
+
+                &:hover {
+                    color: #fff;
+                }
+            }
+        }
     }
-    
 }
 
 @keyframes fadeIn {
@@ -149,7 +147,6 @@ body {
             }
         }
     }
-    
 }
 
 @media (max-width: 480px) {
