--- a/client/src/components/feedPage/FeedPage.scss
+++ b/client/src/components/feedPage/FeedPage.scss
@@ -1,10 +1,23 @@
 .feed-container {
     display: flex;
     justify-content: space-between;
-    background-color: #f8f9fa;
+    position: relative;
+    
+    &::before {
+        content: "";
+        position: absolute;
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: 100%;
+        background-image: url("../../../assets/images/back4.jpg");
+        background-size: cover;
+        background-position: center;
+        opacity: 0.15; 
+        z-index: -1; 
+    }
 
     .feed-main {
         flex: 1;
     }
-
 }
