--- a/client/src/components/feedPage/postStatus/PostStatus.scss
+++ b/client/src/components/feedPage/postStatus/PostStatus.scss
@@ -6,7 +6,7 @@
     background-color: #fff;
     padding: 16px;
     border-radius: 8px;
-    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+    box-shadow: 4px 4px 4px 4px rgba(0, 0, 0, 0.3);
     height: 200px;
     width: 92%;
 
@@ -55,9 +55,10 @@
             font-size: 24px;
             cursor: pointer;
             color: #555;
+            transition: color 0.3s ease;
 
             &:hover {
-                color: #000;
+                color: #007bff;
             }
         }
 
