--- a/client/src/components/feedPage/postsPage/PostsPage.scss
+++ b/client/src/components/feedPage/postsPage/PostsPage.scss
@@ -12,14 +12,14 @@
         .post-item {
             background-color: #fff;
             border-radius: 8px;
-            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+            box-shadow: 4px 4px 4px 4px rgba(0, 0, 0, 0.3);
             margin-bottom: 20px;
             padding: 15px;
             transition: transform 0.3s ease, box-shadow 0.3s ease;
 
             &:hover {
                 transform: translateY(-5px);
-                box-shadow: 0 6px 12px rgba(0, 0, 0, 0.15);
+                box-shadow: 4px 4px 4px 4px rgba(0, 0, 0, 0.5);
             }
 
             .post-header {
