--- a/client/src/index.scss
+++ b/client/src/index.scss
@@ -2,5 +2,5 @@ body, html {
     margin: 0;
     padding: 0;
     font-family: 'Open Sans', sans-serif;
-    background-color:  #f8f9fa;
+    //background-color:  #f8f9fa;
 }
