added back + front for logged user profile, working fine

--- a/client/src/components/feedPage/nav/NavBar.scss
+++ b/client/src/components/feedPage/nav/NavBar.scss
@@ -7,6 +7,10 @@
         padding: 10px 20px;
         box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
         border-bottom: 1px solid #ddd;
+        
+        a{
+            text-decoration: none;
+        }
 
         .nav-left {
             flex: 1;
