added to visit other profiles and see their posts(back + front), tested, working good

--- a/client/src/components/registerPage/RegisterPage.scss
+++ b/client/src/components/registerPage/RegisterPage.scss
@@ -1,3 +1,6 @@
+a{
+    text-decoration: none;
+}
 .register-page-container {
     background-image: url("../../../assets/images/background.png");
     background-size: cover;
