--- a/client/src/components/feedPage/postsPage/UpdatePostForm.scss
+++ b/client/src/components/feedPage/postsPage/UpdatePostForm.scss
@@ -127,7 +127,7 @@
 
         .form-actions {
             display: flex;
-            justify-content: flex-end;
+            justify-content: space-between;
             gap: 10px;
         }
     }
