--- a/client/src/components/feedPage/postItem/PostItem.scss
+++ b/client/src/components/feedPage/postItem/PostItem.scss
@@ -71,8 +71,9 @@
 
         p {
             font-size: 14px;
-            color: #444;
+            color: #333;
             margin-bottom: 10px;
+            font-weight: 600;
         }
 
         .post-image {
