--- a/client/src/components/feedPage/comments/Comments.scss
+++ b/client/src/components/feedPage/comments/Comments.scss
@@ -17,7 +17,7 @@
         display: flex;
         align-items: center;
         transition: background-color 0.3s ease, box-shadow 0.3s ease;
-        position: relative;  // Add this to position the timestamp absolutely
+        position: relative; 
 
         &:hover {
             background-color: #e9e9e9;
