--- a/client/src/components/feedPage/comments/Comments.scss
+++ b/client/src/components/feedPage/comments/Comments.scss
@@ -14,11 +14,10 @@
         border-radius: 8px;
         box-shadow: 2px 2px 4px rgba(0, 0, 0, 0.2);
         margin: 10px;
-        padding: 5px;
+        padding: 10px;
         display: flex;
-        align-items: flex-start; 
+        flex-direction: column;
         transition: background-color 0.3s ease, box-shadow 0.3s ease;
-        position: relative; 
 
         &:hover {
             background-color: #e9e9e9;
@@ -28,9 +27,7 @@
         .comment-user-info {
             display: flex;
             align-items: center;
-            flex: 1; 
-            margin-right: 15px;
-            position: relative; 
+            margin-bottom: 5px;
 
             .comment-user-photo {
                 width: 35px;
@@ -40,154 +37,135 @@
                 margin-right: 10px;
             }
 
-            .comment-username {
-                font-size: 14px;
-                font-weight: 600;
-                color: #444;
+            .comment-content {
+                display: flex;
+                flex-direction: column;
 
-                strong {
-                    color: #000;
+                .comment-text {
+                    display: flex;
+                    align-items: center;
+                    gap: 10px; 
+
+                    .comment-username {
+                        font-size: 14px;
+                        font-weight: 600;
+                        color: #444;
+                        margin: 0;
+
+                        strong {
+                            color: #000;
+                        }
+                    }
+
+                    .comment-edit-input {
+                        font-size: 12px;
+                        color: #444;
+                        padding: 5px;
+                        border: 1px solid #ccc;
+                        border-radius: 4px;
+                        background-color: #fff;
+                        box-shadow: 0 1px 3px rgba(0, 0, 0, 0.1);
+                        transition: border-color 0.2s ease, box-shadow 0.2s ease;
+                        
+                        &:focus {
+                            border-color: #007bff;
+                            box-shadow: 0 0 5px rgba(0, 123, 255, 0.5);
+                            outline: none;
+                        }
+                    }
+
+                    .comment-actions {
+                        display: flex;
+                        align-items: center;
+                        gap: 5px;
+                        margin-left: auto; // Align actions to the right
+                        
+                        button {
+                            background: none;
+                            border: none;
+                            cursor: pointer;
+                            font-size: 14px;
+                            transition: color 0.2s ease;
+                            
+                            &:hover {
+                                color: #007bff;
+                            }
+                            
+                            &.delete-button {
+                                color: #dc3545;
+                                
+                                &:hover {
+                                    color: #ce0216;
+                                }
+                            }
+                        }
+                    }
                 }
-            }
-        }
 
-        p {
-            font-size: 14px;
-            color: #444;
-            margin: 0;
-        }
-
-        .comment-timestamp {
-            font-size: 12px;
-            color: #888;
-            position: absolute;
-            bottom: 5px;
-            right: 5px; 
-        }
-
-        .comment-actions {
-            position: absolute;
-            top: 14px; 
-            right: 120px; 
-            display: flex;
-            gap: 5px;
-            align-items: center;
-
-            button {
-                background: none;
-                border: none;
-                cursor: pointer;
-                font-size: 14px; 
-                transition: color 0.2s ease;
-
-                &:hover {
-                    color: #007bff; 
+                .comment-timestamp {
+                    font-size: 12px;
+                    color: #888;
+                    margin-top: 5px;
                 }
-            }
-
-            .delete-button {
-                color: #dc3545; 
-
-                &:hover {
-                    color: #ce0216; 
-                }
-            }
-        }
-    }
-
-    @media (max-width: 991px) {
-        .comment-item {
-            padding: 8px;
-
-            .comment-user-info {
-                .comment-user-photo {
-                    width: 30px;
-                    height: 30px;
-                }
-
-                .comment-username {
-                    font-size: 13px;
-                }
-            }
-
-            p {
-                font-size: 13px;
-            }
-
-            .comment-timestamp {
-                font-size: 11px;
-                right: 5px;
-                top: 15px;
-            }
-
-            .comment-actions {
-                top: 12px; 
-                right: 120px;
             }
         }
     }
 
     @media (max-width: 767px) {
         .comment-item {
-            padding: 6px;
+            padding: 8px;
 
-            .comment-user-info {
-                .comment-user-photo {
-                    width: 25px;
-                    height: 25px;
+            .comment-content {
+                .comment-text {
+                    span{
+                        font-size: 13px;
+                    }
+                    .comment-edit-input {
+                        font-size: 10px;
+                        padding: 4px;
+                    }
+
+                    .comment-actions {
+                        margin-top: 5px;
+                        button {
+                            font-size: 12px;
+                        }
+                    }
                 }
 
-                .comment-username {
-                    font-size: 12px;
+                .comment-timestamp {
+                    font-size: 11px;
                 }
-            }
-
-            p {
-                font-size: 12px;
-            }
-
-            .comment-timestamp {
-                font-size: 10px;
-                right: 5px;
-            }
-
-            .comment-actions {
-                top: 10px; 
-                right: 100px;
             }
         }
     }
 
     @media (max-width: 575px) {
         .comment-item {
-            padding: 4px;
+            padding: 6px;
 
-            .comment-user-info {
-                .comment-user-photo {
-                    width: 20px;
-                    height: 20px;
+            .comment-content {
+                .comment-text {
+                    span{
+                        font-size: 12px;
+                        max-width: 120px;
+                    }
+                    .comment-edit-input {
+                        width: 120px;
+                        font-size: 10px;
+                        padding: 3px;
+                    }
+
+                    .comment-actions {
+                        margin-top: 5px;
+                        button {
+                            font-size: 11px;
+                        }
+                    }
                 }
 
-                .comment-username {
-                    font-size: 11px;
-                }
-            }
-
-            p {
-                font-size: 11px;
-            }
-
-            .comment-timestamp {
-                font-size: 9px;
-                right: 5px;
-                top: 10px;
-            }
-
-            .comment-actions {
-                top: 7px; 
-                right: 100px;
-                button {
-                    font-size: 11px;
+                .comment-timestamp {
+                    font-size: 10px;
                 }
             }
         }
