--- a/client/src/components/feedPage/comments/Comments.scss
+++ b/client/src/components/feedPage/comments/Comments.scss
@@ -18,11 +18,7 @@
         display: flex;
         flex-direction: column;
         transition: background-color 0.3s ease, box-shadow 0.3s ease;
-
-        &:hover {
-            background-color: #e9e9e9;
-            box-shadow: 2px 2px 6px rgba(0, 0, 0, 0.3);
-        }
+        position: relative; // Enables absolute positioning for child elements
 
         .comment-user-info {
             display: flex;
@@ -78,7 +74,10 @@
                         display: flex;
                         align-items: center;
                         gap: 5px;
-                        margin-left: auto; // Align actions to the right
+                        position: absolute; // Position actions absolutely within the parent
+                        right: 10px; // Align actions to the right edge
+                        top: 60%; // Center actions vertically
+                        transform: translateY(-50%); // Adjust vertical centering
                         
                         button {
                             background: none;
