--- a/client/src/components/feedPage/registeredUsers/RegisteredUsers.scss
+++ b/client/src/components/feedPage/registeredUsers/RegisteredUsers.scss
@@ -14,6 +14,11 @@
         border-bottom: 2px solid #007bff; 
     }
 
+    button{
+        border: none;
+        background-color: transparent;
+    }
+
     ul {
         list-style: none;
         padding: 0;
