--- a/client/src/components/feedPage/comments/Comments.scss
+++ b/client/src/components/feedPage/comments/Comments.scss
@@ -18,7 +18,7 @@
         display: flex;
         flex-direction: column;
         transition: background-color 0.3s ease, box-shadow 0.3s ease;
-        position: relative; // Enables absolute positioning for child elements
+        position: relative; 
 
         .comment-user-info {
             display: flex;
