--- a/client/src/components/feedPage/registeredUsers/RegisteredUsers.scss
+++ b/client/src/components/feedPage/registeredUsers/RegisteredUsers.scss
@@ -3,6 +3,7 @@
     padding: 16px;
     box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
     border-left: 2px solid #007bff; 
+    border-bottom: 2px solid #007bff; 
 
     h2 {
         margin-top: 20px;
