--- a/client/src/components/friendRequest/FriendRequest.scss
+++ b/client/src/components/friendRequest/FriendRequest.scss
@@ -1,10 +1,10 @@
-.chat-request-container {
+.friend-request-container {
     display: flex;
     justify-content: space-between;
     align-items: flex-start;
     margin-top: 16px;
     
-    .chat-requests {
+    .friend-requests {
         width: 600px;
         padding: 50px;
         box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
@@ -93,13 +93,13 @@
 }
 
 @media (max-width: 991px) {
-    .chat-requests {
+    .friend-requests {
         width: 250px;
     }
 }
 
 @media (max-width: 575px) {
-    .chat-requests {
+    .friend-requests {
         display: none;
     }
 }
