fixed unsread messages notifications, tested, working good + changed conversation page, added leave button, removed navbar

--- a/client/src/components/feedPage/registeredUsers/RegisteredUsers.scss
+++ b/client/src/components/feedPage/registeredUsers/RegisteredUsers.scss
@@ -109,8 +109,8 @@
 
 @media (max-width: 767px) {
     .registered-users {
-        width: 200px;
-
+        display: none;
+        
         .user-item {
             .user-photo,
             .user-icon {
