--- a/client/src/components/friendRequest/FriendRequest.scss
+++ b/client/src/components/friendRequest/FriendRequest.scss
@@ -9,9 +9,6 @@
         max-width: 400px; 
         margin: auto;
         padding: 20px; 
-        box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
-        border: 2px solid #007bff;
-        background-color: #f9f9f9;
         border-radius: 8px;
 
         form {
@@ -60,7 +57,8 @@
 
                 p {
                     margin: 0;
-                    font-size: 14px;
+                    font-size: 16px;
+                    font-weight: 700;
                     color: #333;
                 }
 
@@ -76,6 +74,7 @@
                         border: none;
                         border-radius: 4px;
                         cursor: pointer;
+                        transition: 0.3s ease;
 
                         &:hover {
                             background-color: #0056b3;
@@ -171,7 +170,7 @@
 
 @media (max-width: 575px) {
     .friend-request-container .friend-requests {
-        width: 70%;
+        width: 85%;
     }
     .friend-request-container .friends-list ul .user-item {
         width: 90%;
