--- a/client/src/components/friendRequest/FriendRequest.scss
+++ b/client/src/components/friendRequest/FriendRequest.scss
@@ -99,6 +99,7 @@
 
         h2 {
             text-align: center;
+            font-size: 2.2rem;
         }
 
         ul {
@@ -118,22 +119,23 @@
                 border-bottom: 1px solid #ddd;
 
                 .user-photo {
-                    width: 40px;
-                    height: 40px;
+                    width: 60px;
+                    height: 60px;
                     border-radius: 50%; 
                     margin-right: 10px;
+                    object-fit: cover;
                 }
 
                 p {
                     margin: 0;
-                    font-size: 16px;
+                    font-size: 20px;
                     color: #333;
                     font-weight: 700;
                     flex-grow: 1;
                 }
 
                 .user-chat-icon {
-                    font-size: 30px;
+                    font-size: 36px;
                     cursor: pointer;
                     transition: color 0.3s ease;
                     color: #007bff;
